--- a/src/questions.pug
+++ b/src/questions.pug
@@ -20,5 +20,6 @@ block content
 	.wrapper
 		include _html/_header
 		main.page__questions
+			include _html/test
 		include _html/_footer
 	script(src="js/app.min.js")
