--- a/src/_scss/common.scss
+++ b/src/_scss/common.scss
@@ -1,1 +1,22 @@
-// Заголовки, общие БЄМ блоки и проче...
+.btn{
+  font-size: rem(18);
+  border: 1px solid #f8f8f8;
+  background-color: #fdfdfd;
+  border-radius: 5px;
+  transition: all .3s ease 0s;
+  &:hover{
+    color: $colorOrange;
+    border: 1px solid $colorOrange;
+  }
+}
+.progress{
+  background-color: #e9ecef;
+  border-radius: rem(5);
+  &-bar{
+    width: 2%;
+    height: rem(15);
+    border-top-left-radius: rem(5);
+    border-bottom-left-radius: rem(5);
+    background: $colorOrange;
+  }
+}
