--- a/src/_scss/footer.scss
+++ b/src/_scss/footer.scss
@@ -2,6 +2,7 @@
   font-weight: 300;
   text-transform: uppercase;
   border-top: 1px solid $colorBlackOnyx;
+  color: #706F6F;
   &__container{
     padding: rem(20) rem(30);
 	}
@@ -10,6 +11,7 @@
     align-items: center;
     gap: rem(20);
     transition: all .3s ease 0s;
+    line-height: 1.2;
     &:hover{
       color: $colorOrange;
     }
