--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,7 @@ head
   ol.rootpage__list
     li
       a(target='_blank' href='home.html') Главная
+      a(target='_blank' href='questions.html') Тест
   h2 Всплывающие окна:
   ol.rootpage__list
     li
