--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -320,6 +320,7 @@ address {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   border-radius: 75px;
+  margin-left: 0.625rem;
 }
 
 .test__btn-back:hover {
