--- a/src/questions.pug
+++ b/src/questions.pug
@@ -13,7 +13,7 @@ block vars
 	- var widthImage = '400'
 	- var heightImage = '300'
 	- var favicon = 'img/favicons/favicon.png'
-	- var font = 'fonts/.woff2'
+	- var font = 'fonts/Montserrat-Medium.woff2'
 	- var light = ''
 	- var dark = ''
 block content
