--- a/src/_scss/footer.scss
+++ b/src/_scss/footer.scss
@@ -1,4 +1,5 @@
 .footer{
+  @include adaptiveValue("font-size", 16, 14);
   font-weight: 300;
   text-transform: uppercase;
   border-top: 1px solid $colorBlackOnyx;
@@ -8,12 +9,18 @@
 	}
   &__logo{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    gap: rem(20);
+    column-gap: rem(20);
+    row-gap: rem(10);
     transition: all .3s ease 0s;
     line-height: 1.2;
     &:hover{
       color: $colorOrange;
+    }
+    @include media-breakpoint-down(mobile){
+      justify-content: center;
+      text-align: center;
     }
   }
 }
