--- a/src/_scss/footer.scss
+++ b/src/_scss/footer.scss
@@ -15,6 +15,7 @@
     row-gap: rem(10);
     transition: all .3s ease 0s;
     line-height: 1.2;
+    width: fit-content;
     &:hover{
       color: $colorOrange;
     }
