--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -125,7 +125,6 @@ address {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  margin: 0 3.125rem;
 }
 
 .wrapper > main {
@@ -292,6 +291,39 @@ address {
   color: var(--colorOrange);
 }
 
+.page {
+  display: flex;
+  flex-direction: column;
+  padding: 0 6.25rem;
+}
+
+.page__logo {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 1.25rem 2.5rem;
+  color: var(--colorWhite);
+  background-color: var(--colorOrange);
+}
+
+.page__content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.page__text {
+  flex: 0 1 50rem;
+  line-height: 1.3;
+}
+
+.page__btn {
+  display: block;
+  background-color: var(--colorWhite);
+  border: 1px solid var(--colorBlack);
+  padding: 1.25rem;
+}
+
 .test {
   max-width: 56.25rem;
   padding: 6.25rem 0.625rem;
@@ -346,6 +378,17 @@ address {
 }
 
 @media (min-width: 48em) {
+  .page::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    display: block;
+    width: 20px;
+    background-color: var(--colorOrange);
+  }
+
   .test__answer {
     margin-left: 0.625rem;
   }
@@ -380,6 +423,26 @@ address {
 
   .footer {
     font-size: 1rem;
+  }
+
+  .page__content {
+    margin-top: 12.5rem;
+  }
+
+  .page__content {
+    margin-left: 3.125rem;
+  }
+
+  .page__content {
+    gap: 6.25rem;
+  }
+
+  .page__text {
+    font-size: 1.875rem;
+  }
+
+  .page__btn {
+    font-size: 1.5rem;
   }
 
   .test__question {
@@ -420,6 +483,22 @@ address {
     font-size: 0.875rem;
   }
 
+  .page__content {
+    margin-top: 3.125rem;
+  }
+
+  .page__content {
+    gap: 1.875rem;
+  }
+
+  .page__text {
+    font-size: 1.25rem;
+  }
+
+  .page__btn {
+    font-size: 1.125rem;
+  }
+
   .test__question {
     font-size: 1rem;
   }
@@ -438,8 +517,17 @@ address {
 }
 
 @media (max-width: 63.99875em) {
-  .wrapper {
-    margin: 0 0.625rem;
+  .page {
+    padding: 0 0.625rem;
+  }
+
+  .page__content {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .page__content {
+    margin: auto;
   }
 }
 
@@ -447,6 +535,20 @@ address {
   .footer__logo {
     justify-content: center;
     text-align: center;
+  }
+
+  .page__logo {
+    display: flex;
+    justify-content: center;
+    padding: 0.625rem 1.875rem;
+    width: calc(100vw + 20px);
+    margin-left: -10px;
+  }
+
+  .page__logo svg {
+    width: 15.625rem !important;
+    height: 4.0625rem !important;
+    margin-left: -20px;
   }
 
   .test {
@@ -460,6 +562,12 @@ address {
   .test__answer {
     flex-direction: column;
     justify-content: center;
+  }
+}
+
+@media (max-width: 29.99875em) {
+  .page__btn {
+    flex: 1 1 auto;
   }
 }
 
@@ -484,6 +592,22 @@ address {
     font-size: clamp( 0.875rem , 0.85rem  +  0.125vw , 1rem );
   }
 
+  .page__content {
+    margin-top: clamp( 3.125rem , 1.25rem  +  9.375vw , 12.5rem );
+  }
+
+  .page__content {
+    gap: clamp( 1.875rem , 1rem  +  4.375vw , 6.25rem );
+  }
+
+  .page__text {
+    font-size: clamp( 1.25rem , 1.125rem  +  0.625vw , 1.875rem );
+  }
+
+  .page__btn {
+    font-size: clamp( 1.125rem , 1.05rem  +  0.375vw , 1.5rem );
+  }
+
   .test__question {
     font-size: clamp( 1rem , 0.9rem  +  0.5vw , 1.5rem );
   }
@@ -498,5 +622,11 @@ address {
 
   .test__progress-counter {
     margin-right: clamp( 0.625rem , 0.375rem  +  1.25vw , 1.875rem );
+  }
+}
+
+@media (min-width: 47.9375em) and (max-width: 120em) {
+  .page__content {
+    margin-left: clamp( 0.625rem , -1.0380529055rem  +  3.4692107546vw , 3.125rem );
   }
 }
