--- a/src/index.pug
+++ b/src/index.pug
@@ -15,6 +15,8 @@ head
       a(target='_blank' href='home.html') Главная
     li
       a(target='_blank' href='questions.html') Тест
+    li
+      a(target='_blank' href='result.html') Результат
   h2 Всплывающие окна:
   ol.rootpage__list
     li
