--- a/src/_html/test.pug
+++ b/src/_html/test.pug
@@ -1,7 +1,7 @@
 section.test
   .test__question Вам нравится участвовать в географических, геологических экспедициях?
   .test__answer 
-    button.test__btn-answer.btn(type="button") Да
+    button.test__btn-answer.btn(type="button" data-popup='#auth') Да
     button.test__btn-answer.btn(type="button") Нет
     button.test__btn-answer.btn(type="button") Затрудняюсь ответить
   button.test__btn-back(type="button")
