--- a/src/index.pug
+++ b/src/index.pug
@@ -20,7 +20,7 @@ head
   h2 Всплывающие окна:
   ol.rootpage__list
     li
-      a(target='_blank' href='home.html#')
+      a(target='_blank' href='questions.html#auth') Авторизация
   .rootpage__tnx
     h2 Спасибо за заказ!
     p Будурад хорошему отзыву.
