--- a/src/questions.pug
+++ b/src/questions.pug
@@ -22,4 +22,5 @@ block content
 		main.page__questions
 			include _html/test
 		include _html/_footer
+		include _html/_popup-auth
 	script(src="js/app.min.js")
