--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -112,6 +112,12 @@ address {
   font-style: unset;
 }
 
+.lock body {
+  overflow: hidden;
+  -ms-touch-action: none;
+      touch-action: none;
+}
+
 .js-focus-visible :focus-visible {
   outline: var(--colorOrange) auto 1px;
 }
@@ -156,6 +162,153 @@ address {
 
 [class*=__container] {
   padding: 0 0.625rem;
+}
+
+body::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  -webkit-transition: opacity 0.8s ease 0s;
+  -o-transition: opacity 0.8s ease 0s;
+  transition: opacity 0.8s ease 0s;
+  pointer-events: none;
+  z-index: 149;
+}
+
+body.popup-show::after {
+  opacity: 1;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 30px 10px;
+  -webkit-transition: visibility 0.8s ease 0s;
+  -o-transition: visibility 0.8s ease 0s;
+  transition: visibility 0.8s ease 0s;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.popup_show {
+  z-index: 150;
+  visibility: visible;
+  overflow: auto;
+  pointer-events: auto;
+}
+
+.popup_show .popup__content {
+  visibility: visible;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+.popup__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+  flex: 1 1 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup__content {
+  visibility: hidden;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: -webkit-transform 0.3s ease 0s;
+  transition: -webkit-transform 0.3s ease 0s;
+  -o-transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
+  background-color: #eee;
+  padding: 20px;
+  width: 100%;
+  max-width: 500px;
+  border-radius: 20px;
+}
+
+.lock .popup__content {
+  visibility: visible;
+}
+
+.popup__close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.auth__form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 1.125rem;
+  margin-top: 3.125rem;
+}
+
+.auth__inputs {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  max-width: 21.875rem;
+}
+
+.auth__input {
+  border: 1px solid var(--colorBlackOnyx);
+  border-radius: 0.3125rem;
+  background-color: #eee;
+  margin: 0.625rem 0;
+  padding: 0.625rem 0.9375rem;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.auth__input.focus-visible {
+  outline: unset;
+  border: 1px solid var(--colorOrange);
+}
+
+.auth__input::-webkit-outer-spin-button,
+.auth__input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+          appearance: none;
+  margin: 0;
+}
+
+.auth__btns {
+  display: flex;
+  gap: 0.9375rem;
+  margin-top: 3.125rem;
+  font-size: 1rem;
+}
+
+.auth__btn-submit {
+  flex: 0 1 50%;
+  border: 1px solid var(--colorOrange);
+  border-radius: 100px;
+  padding: 0.625rem 0.9375rem;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.auth__btn-submit:hover {
+  background-color: var(--colorOrange);
+  color: var(--colorWhite);
 }
 
 [class*=-ibg] {
@@ -666,6 +819,15 @@ address {
 }
 
 @media (max-width: 47.99875em) {
+  .auth__btns {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .auth__btn-submit {
+    flex: 0 1 90%;
+  }
+
   .footer__logo {
     justify-content: center;
     text-align: center;
@@ -766,6 +928,16 @@ address {
 }
 
 @media (any-hover: hover) {
+  .popup__close {
+    -webkit-transition: color 0.3s ease 0s;
+    -o-transition: color 0.3s ease 0s;
+    transition: color 0.3s ease 0s;
+  }
+
+  .popup__close:hover {
+    color: var(--colorOrange);
+  }
+
   .result__share:hover {
     color: var(--colorOrange);
   }
