--- a/src/_scss/style.scss
+++ b/src/_scss/style.scss
@@ -66,10 +66,10 @@ $grid-breakpoints: (
 
 body {
 	// Скролл заблокирован
-	// .lock & {
-	// 	overflow: hidden;
-	// 	touch-action: none;
-	// }
+	.lock & {
+		overflow: hidden;
+		touch-action: none;
+	}
 	// Сайт загружен
 	// .loaded & {
 	// }
