--- a/src/result.pug
+++ b/src/result.pug
@@ -64,17 +64,17 @@ block content
               .directions__title Цифровая графика в индустрии компьютерных играх
               .directions__footer 
                 .directions__subtitle Дизайн
-                a.directions__link(href="https://midis.ru/midis-obrazovanie-s-trudoustroystvom/dizayn/3d-modelirovanie-dlya-kompyuternykh-igr-i-animatsiya/") Узнать больше
+                a.directions__link(target='_blink' href="https://midis.ru/midis-obrazovanie-s-trudoustroystvom/dizayn/3d-modelirovanie-dlya-kompyuternykh-igr-i-animatsiya/") Узнать больше
             .directions__item
               .directions__title Дизайн среды
               .directions__footer 
                 .directions__subtitle Дизайн
-                a.directions__link(href="https://midis.ru/midis-obrazovanie-s-trudoustroystvom/dizayn/3d-modelirovanie-dlya-kompyuternykh-igr-i-animatsiya/") Узнать больше
+                a.directions__link(target='_blink' href="https://midis.ru/midis-obrazovanie-s-trudoustroystvom/dizayn/3d-modelirovanie-dlya-kompyuternykh-igr-i-animatsiya/") Узнать больше
             .directions__item
               .directions__title Дизайн одежды и маркетинг в модной индустрии
               .directions__footer 
                 .directions__subtitle Дизайн
-                a.directions__link(href="https://midis.ru/midis-obrazovanie-s-trudoustroystvom/dizayn/3d-modelirovanie-dlya-kompyuternykh-igr-i-animatsiya/") Узнать больше
+                a.directions__link(target='_blink' href="https://midis.ru/midis-obrazovanie-s-trudoustroystvom/dizayn/3d-modelirovanie-dlya-kompyuternykh-igr-i-animatsiya/") Узнать больше
           a.result__share(href="#")
             +svg('share', '31', '44', 'currentColor', 'none')
     include _html/_footer
