--- a/src/_scss/result.scss
+++ b/src/_scss/result.scss
@@ -33,37 +33,43 @@
   position: relative;
   display: flex;
   justify-content: space-around;
-  gap: rem(50);
-  font-size: rem(20);
+  @include media-breakpoint-down(laptop){
+    justify-content: space-between;
+  }
+  @include adaptiveValue("gap", 50, 10);
   &::after{
-    content:'';
-    position: absolute;
-    display: block;
-    bottom: rem(60);
-    background-color: var(--colorBlackOnyx);
-    height: 1px;
-    width: 100%;
+    @include media-breakpoint-up(mobile){
+      content:'';
+      position: absolute;
+      display: block;
+      @include adaptiveValue("bottom", 60, 40);
+      background-color: var(--colorBlackOnyx);
+      height: 1px;
+      width: 100%;
+    }
   }
   // .rating__item
   &__item {
     display: flex;
     flex-direction: column;
     flex: 0 1 15%;
+    width: 10px;
   }
   &__top{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: rem(700);
+    @include adaptiveValue("height", 700, 400);
   }
   // .rating__score
   &__score {
     text-align: right;
+    @include adaptiveValue("font-size", 16, 14);
     border-bottom: 1px solid var(--colorBlackOnyx);
   }
   // .rating__block
   &__block {
-    width: rem(160);
+    @include adaptiveValue("width", 130, 40);
     &_creative{
       height: 98%;
       background-color: #FB96CB;
@@ -87,21 +93,27 @@
   }
   // .rating__title
   &__title {
+    @include adaptiveValue("font-size", 20, 10);
     max-width: rem(232);
     margin-top: rem(20);
+    word-wrap: break-word;
+    @include media-breakpoint-down(mobile){
+      margin-top: rem(10);
+    }
   }
 }
 .directions {
   display: grid;
   justify-content: space-around;
-  gap: rem(50);
-  grid-template-columns: repeat(3 ,minmax(320px,400px));
-  grid-template-rows: 150px;
+  @include adaptiveValue("gap", 50, 20);
+  grid-template-columns: repeat(auto-fill ,minmax(300px,400px));
   // .directions__item
   &__item {
+    position: relative;
     display: flex;
     flex-direction: column;
     padding: rem(30) rem(20);
+    min-height: 150px;
     border: 1px solid var(--colorBlackOnyx);
     transition: all .3s ease 0s;
     @media (any-hover: hover){
@@ -127,6 +139,14 @@
   // .directions__link
   &__link {
     text-decoration: underline !important;
+    &::before{
+      content:'';
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+    }
   }
 }
 .share {
