--- a/src/_scss/common.scss
+++ b/src/_scss/common.scss
@@ -15,8 +15,7 @@
   &-bar{
     width: 2%;
     height: rem(15);
-    border-top-left-radius: rem(5);
-    border-bottom-left-radius: rem(5);
+    border-radius: rem(5);
     background: $colorOrange;
   }
 }
