--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -476,6 +476,20 @@ body.popup-show::after {
   padding: 1.25rem;
 }
 
+.auth__agree {
+  font-size: 0.875rem;
+  margin-top: 1.875rem;
+}
+
+.auth__agree-link {
+  color: var(--colorOrange);
+  text-decoration: underline !important;
+}
+
+.auth__btns {
+  margin-top: 0.9375rem;
+}
+
 .test {
   max-width: 56.25rem;
   padding: 6.25rem 0.625rem;
