--- a/src/_html/_popup-auth.pug
+++ b/src/_html/_popup-auth.pug
@@ -8,6 +8,7 @@
           input.auth__input(type="text" name='name' placeholder='Фамилия Имя' required)
           input.auth__input(type="number" name='class' placeholder='Класс' required)
           input.auth__input(type="tel" name='phone' placeholder='Телефон' required)
+          input.auth__input(type="email" name='email' placeholder='E-mail' required)
         .auth__agree 
           |Выбирая тип обучения, я даю свое согласие на обработку персональных данных, в соответствии с 
           a.auth__agree-link(href="https://midis.ru/politika-konfidentsialnosti/" target='_blank') Политикой конфиденциальности
